Ensure the text is visible while webfonts are loading

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,12 +14,14 @@ button, hr, input {
     src: url(../fonts/fontawesome-webfont.eot?#iefix&v=4.7.0) format("embedded-opentype"), url(../fonts/fontawesome-webfont.woff2?v=4.7.0) format("woff2"), url(../fonts/fontawesome-webfont.woff?v=4.7.0) format("woff"), url(../fonts/fontawesome-webfont.ttf?v=4.7.0) format("truetype"), url(../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular) format("svg");
     font-weight: 400;
     font-style: normal;
+    font-display: swap;
 }
 
 .fa {
     display: inline-block;
-    font: 14px/1 FontAwesome;
-    font-size: inherit;
+    font-size: 14px;
+    font-family: FontAwesome, Helvetica, sans-serif;
+    line-height: 1;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale
